test/oscar/compiler/errors/logicalOpMismatch.oscar
def main() => unit = {
  println(1 && true);
}